fix: fixed security issues
* fixed small security issues

--- a/src/createCompany.html
+++ b/src/createCompany.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="css/companyCreation.css">
         <link href="https://api.fontshare.com/v2/css?f[]=supreme@1&display=swap" rel="stylesheet">
     </head>
-    <body onload="OnLoad()">
+    <body>
         <div id="container" style="opacity: 0;">
             <h1>CREATE YOUR <p style="display: inline; font-size: 80px; font-style: italic;" class="special">COMPANY.</p></h1>
             <h3 style="margin-top: -50px; margin-left: 10px; margin-right: 10px;">To continue using Taskify Business, create a company in order to divide maintenance roles among its members, create Tasks and more!</h3>
