--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
         <link href="https://api.fontshare.com/v2/css?f[]=excon@1&display=swap" rel="stylesheet">
         <link href="https://api.fontshare.com/v2/css?f[]=clash-display@1&display=swap" rel="stylesheet">
     </head>
-    <body onload="OnLoad()">
+    <body>
         <div class="container" id="app">
             <div class="column">
                 <h1 style="font-family: 'Excon', sans-serif;">MAINTENANCE TASKS</h1>
