--- a/src/popUp.html
+++ b/src/popUp.html
@@ -8,7 +8,7 @@
         <link href="https://api.fontshare.com/v2/css?f[]=supreme@1&display=swap" rel="stylesheet">
         <link href="https://api.fontshare.com/v2/css?f[]=excon@1&display=swap" rel="stylesheet">
     </head>
-    <body onload="OnLoad()">
+    <body>
         <center>
             <div id="loading" style="display: block; margin-top: 130px;">
                 <span class="loader"></span>
