--- a/src/index.html
+++ b/src/index.html
@@ -134,5 +134,7 @@
             </div>
         </div>
     </body>
-    <script src="js/render.js"></script><script src="js/fetchDependecies.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.3.0/dist/chart.umd.min.js"></script>
+    <script src="js/render.js"></script>
+    <script src="js/fetchDependecies.js"></script>
 </html>
